@@ -1,5 +1,6 @@
 package myself.programing.coding.model;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import lombok.AllArgsConstructor;
@@ -7,6 +8,7 @@ import lombok.NoArgsConstructor;
 import myself.programing.coding.entity.Account;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
@@ -18,9 +20,17 @@ public class CustomUserDetails implements UserDetails {
     @Autowired
     private Account account;
 
+    /**
+     *
+     * @return Account
+     */
+    public Account getAccount() {
+        return this.account;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Arrays.asList(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
